--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
-<head>
-  <title>Jonathon Gomez</title>
-</head>
-<body>
- <h1>Jonathon Gomez</h1>
-</body>
-</html>  
+  <head>
+    <title>Jonathon Gomez</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" />
+    <meta
+      descritption="Assignment portal for Jonathon Gomez in WDD 230: Web
+    Frontend Development at BYU-I"
+    />
+    <link href="css/master.css" rel="stylesheet" />
+  </head>
+  <body>
+    <img src="images/jongomezfall2019 (1).jpg" alt="Jonathon Gomez pic" />
+    <header>Jonathon Richard Gomez</header>
+    <main>CIT 230: Assignment Portal</main>
+
+    <ul>
+      <li>Lesson 02: <a href="url">Assignment Link</a></li>
+      <li>Lesson 03: <a href="url">Assignment Link</a></li>
+      <li>Lesson 04: <a href="url">Link</a> | <a href="url">Link</a></li>
+    </ul>
+    <footer>
+      &copy 2021 | Jonathon Gomez | Idaho |
+      <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
+        <span id="lastchange"></span>
+    </footer>
+    <script src="javascript/lastmodified.js"></script>
+  </body>
+</html>
