--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       descritption="Assignment portal for Jonathon Gomez in WDD 230: Web
     Frontend Development at BYU-I"
     />
-    <link href="css/master.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" rel="stylesheet" />
   </head>
   <body>
     <img src="images/jongomezfall2019 (1).jpg" alt="Jonathon Gomez pic" />
