--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
         <span id="lastchange"></span>
     </footer>
-    <script src="javascript/lastmodified.js"></script>
+    <script src="js/lastmodfied.js"></script>
   </body>
 </html>
