--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
       descritption="Assignment portal for Jonathon Gomez in WDD 230: Web
     Frontend Development at BYU-I"
     />
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet" />
   </head>
   <body>
     <img src="images/jongomezfall2019 (1).jpg" alt="Jonathon Gomez pic" />
-    <header>Jonathon Richard Gomez</header>
+    <header>Jonathon Gomez</header>
     <main>CIT 230: Assignment Portal</main>
 
     <ul>
