--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <title>Jonathon Gomez</title>
     <meta charset="utf-8" />
-    <meta name="viewport" />
     <meta
-      descritption="Assignment portal for Jonathon Gomez in WDD 230: Web
+      description="Assignment portal for Jonathon Gomez in WDD 230: Web
     Frontend Development at BYU-I"
     />
-    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
   </head>
   <body>
-    <img src="images/jongomezfall2019 (1).jpg" alt="Jonathon Gomez pic" />
+    <img src="images/mefall19.jpg" alt="Jonathon Gomez pic" />
     <header>Jonathon Gomez</header>
     <main>CIT 230: Assignment Portal</main>
 
@@ -22,9 +21,9 @@
       <li>Lesson 04: <a href="url">Link</a> | <a href="url">Link</a></li>
     </ul>
     <footer>
-      &copy 2021 | Jonathon Gomez | Idaho |
-      <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
-        <span id="lastchange"></span>
+      &copy; 2021 | Jonathon Gomez | Idaho |
+      <a href="https://www.byui.edu/online">BYUI Online Learning</a><br />
+      <span id="lastchange"></span>
     </footer>
     <script src="js/lastmodfied.js"></script>
   </body>
