--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Jonathon Gomez</title>
     <meta charset="utf-8" />
-    <meta
-      description="Assignment portal for Jonathon Gomez in WDD 230: Web
+    <meta name="description"
+      content="Assignment portal for Jonathon Gomez in WDD 230: Web
     Frontend Development at BYU-I"
     />
     <link href="css/normalize.css" rel="stylesheet" />
