--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Jonathon Gomez</title>
     <meta charset="utf-8" />
-    <meta name="description"
+    <meta
+      name="description"
       content="Assignment portal for Jonathon Gomez in WDD 230: Web
     Frontend Development at BYU-I"
     />
@@ -21,10 +22,11 @@
       <li>Lesson 04: <a href="url">Link</a> | <a href="url">Link</a></li>
     </ul>
     <footer>
-      &copy; 2021 | Jonathon Gomez | Idaho |
+      &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
       <a href="https://www.byui.edu/online">BYUI Online Learning</a><br />
       <span id="lastchange"></span>
     </footer>
     <script src="js/lastmodfied.js"></script>
+    <script src="js/currentyear.js"></script>
   </body>
 </html>
