--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
     <footer>
       &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
-      <a href="https://www.byui.edu/online">BYUI Online Learning</a><br />
+      <a href="https://www.byui.edu/online" id="byuilink">BYUI Online Learning</a><br />
       <span id="lastchange"></span>
     </footer>
     <script src="js/lastmodfied.js"></script>
