--- a/Lesson 3/colors.html
+++ b/Lesson 3/colors.html
@@ -6,9 +6,39 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <h1>The Weather Outsiders Blueprint</h1>
+      <nav>
+       <ul>
+           <li>
+               <a href=index.html>Home</a></li>
+           <li>
+               <a href=targetaudience.html>Target Audience</a>
+           </li>
+           <li>
+               <a href=colors.html>Color Scheme</a>
+           </li>
+           <li>
+               <a href=typography.html>Typography</a>
+           </li>
+       </ul>
+   </nav>
+   </header> 
     <main>
-      Color 1 : Hex 1FD2FF Color 2 : Hex FF8C42 Color 3 : Hex EBFBFF Color 4 :
-      Hex FFE6D6
+      <h2>Colors for the Website</h2><br>
+      <h3>Header & Footer</h3>
+      <p>C</p><br>
+      <h3>Secondary Color</h3>
+      <p>This orange color will be used for the menu and any buttons that lead to any external links</p><br>
+      <h3>Third Color</h3>
+      <p>This dark blue color will be used as for the text constrasting with the white background</p><br>
     </main>
   </body>
+  <footer>
+    &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
+    Brigham Young Univiersity-Idaho<br>
+    <span id="lastchange"></span>
+  </footer>
+  <script src="../js/currentyear.js"></script>
+  <script src="../js/lastmodfied.js"></script>
 </html>
