--- a/Lesson 3/targetaudience.html
+++ b/Lesson 3/targetaudience.html
@@ -6,6 +6,24 @@
     <title>Target Audience</title>
   </head>
   <body>
+    <header>
+      <h1>The Weather Outsiders Blueprint</h1>
+      <nav>
+       <ul>
+           <li>
+               <a href=index.html>Home</a></li>
+           <li>
+               <a href=targetaudience.html>Target Audience</a>
+           </li>
+           <li>
+               <a href=colors.html>Color Scheme</a>
+           </li>
+           <li>
+               <a href=typography.html>Typography</a>
+           </li>
+       </ul>
+   </nav>
+   </header> 
     <h2>Travelers</h2>
     <p>
       This target audience will want to know the current weather conditions
@@ -49,4 +67,13 @@
       friendly.
     </p>
   </body>
+  <footer>
+    &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
+    Brigham Young Univiersity-Idaho<br>
+    <span id="lastchange"></span>
+  </footer>
+  <script src="../js/currentyear.js"></script>
+  <script src="../js/lastmodfied.js"></script>
+</footer>
+
 </html>
