--- a/Lesson 3/typography.html
+++ b/Lesson 3/typography.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Planning Document</title>
+    <title>Typography</title>
 </head>
 <body>
     <header>
@@ -24,13 +24,7 @@
          </ul>
      </nav>
      </header> 
-    <main>
-    <h2>Site Name</h2><br>
-    <p>The name of the site will be The Weather Outsiders.</p></br>
-    <h2>Site Purpose</h2><br>
-    <p>The purpose of this website is to provide current weather information.
-    We do this by providing relevant weather information and provide other relevant stories.There are going to be a couple of local towns that this website will provide specific weather information.</p>
-    </main>
+    
 </body>
 <footer>
     &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
