--- a/Lesson 4/preston-4.html
+++ b/Lesson 4/preston-4.html
@@ -14,13 +14,13 @@
  <header>
      <img id="logo" src="images/twologo.png" alt="outsiderslogo">
      <h1>The Weather Outsiders</h1>
-     <h2>The Best Weather Checker on the Web</h2>
+     <div class="motto">The Best Weather Checker on the Web</div>
      
      <nav class="clearfix">
          <button onclick="toggleMenu()">&#9776</button>
          <ul id="primaryNav" class="hide">
              <li><a>Home</a></li>
-             <li><a href="preston-4.html">Preston</a></li>
+             <li class="active"><a href="preston-4.html">Preston</a></li>
              <li><a>Soda Springs</a></li>
              <li><a>Fish Haven</a></li>
              <li><a>Storm Center</a></li>
@@ -29,9 +29,13 @@
      </nav>
 
  </header>
- <body>
-     <h3>Preston, Idaho</h3>
- </body>  
+ <main>
+     <h2>Preston, Idaho</h2>
+     <h3 class="Section1">Hero Image/Weather Summary</h3>
+     <h3 class="Section2">5 Day Forecast</h3>
+     <h3 class="Section1">Article</h3>
+     <h3 class="Section2">Contact Information</h3>
+ </main>  
  <footer>
     &copy; <span id="currentyear"></span> The Weather Outsiders | Attibutions | Jonathon Gomez<br>
     <span id="lastchange"></span>
