--- a/Lesson 4/preston-4.html
+++ b/Lesson 4/preston-4.html
@@ -17,7 +17,7 @@
      <div class="motto">The Best Weather Checker on the Web</div>
      
      <nav class="clearfix">
-         <button onclick="toggleMenu()">&#9776</button>
+         <button onclick="toggleMenu()">&#9776;</button>
          <ul id="primaryNav" class="hide">
              <li><a>Home</a></li>
              <li class="active"><a href="preston-4.html">Preston</a></li>
