--- a/Lesson 4/preston-4.html
+++ b/Lesson 4/preston-4.html
@@ -10,7 +10,8 @@
     <link href="css/small.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
-<body>
+    <link rel="shortcut icon" href="../favicon.ico">
+    <body>
  <header>
      <img id="logo" src="images/twologo.png" alt="outsiderslogo">
      <h1>The Weather Outsiders</h1>
