--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <ul>
       <li>Lesson 02: <a href="url">Assignment Link</a></li>
       <li>Lesson 03: <a href="Lesson 3/index.html">Web Planning Document</a></li>
-      <li>Lesson 04: <a href="Lesson 4/preston-4.html">Preston, Idaho Page</a> | <a href="url">Link</a></li>
+      <li>Lesson 04: <a href="Lesson 4/preston-4.html">Preston, Idaho Page</a></li>
+      <li>Lesson 05: <a href="Lesson 5/preston-5.html">Preston, Idaho Page Pt. 2</a></li>
     </ul>
     <footer>
       &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
