--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the Preston Page that has relevant weather information for Preston, Idaho.">
     <title>Preston, Idaho</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Solway:wght@400;500&display=swap" rel="stylesheet">
@@ -11,6 +12,7 @@
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
     <link rel="shortcut icon" href="../favicon.ico">
+    </head>
     <body>
  <header>
      <img id="logo" src="images/twologo.png" alt="outsiderslogo">
@@ -33,7 +35,7 @@
  <main>
      <h2>Preston, Idaho</h2>
             <img id="heroimage" src="images/HeroImage.jpg" alt="heroimage"></img>
-                <span>Photo by <a href="https://unsplash.com/@ianscar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ian Scargill</a> on <a href="https://unsplash.com/s/photos/idaho?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+                <span id="phototag">Photo by <a href="https://unsplash.com/@ianscar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ian Scargill</a> on <a href="https://unsplash.com/s/photos/idaho?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
         
          <section class="Section1" id="Weathersummary">
                 <h3 id="weathersum">Weather Summary</h3>
