--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -40,9 +40,11 @@
         
          <section class="Section1" id="Weathersummary">
                 <h3 id="weathersum">Weather Summary</h3>
-         <p>Today:<br>
-            Tonight:<br>
-            Tommorrow:
+         <p>Currently:<br>
+            Temperature:<br>
+            Humidity:<br>
+            Precipitation:<br>
+            Wind Speed: <br>
         </p>
     </section>
     <section class="Section2">            
