--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -51,17 +51,37 @@
     </section>
     <section class="fiveday">            
         <h2>5 Day Forecast</h2>
-        
+        <div class="days">Sun</div>
+        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="days">Mon</div>
+        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="days">Tue</div>
+        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="days">Wed</div>
+        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="days">Thur</div>
+        <img class="weathercond" src="images/snowing.png" alt="weather">
     </section>
     <section class="Article">
-        <h2>Article <Title></Title></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit expedita quo rem itaque non, tempora libero eum quisquam, sed dolorum consectetur perspiciatis eaque, numquam quis error fugiat atque optio repudiandae.</p>
+        <h2>How to survive a blizzard &#128561</h2>
+        <img class="articleimg" src="images/blizzard.jpg" alt="blizzard">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit expedita quo rem itaque non, tempora libero eum quisquam, sed dolorum consectetur perspiciatis eaque, numquam quis error fugiat atque optio repudiandae. 
+           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci sunt minus non laudantium quod, voluptas repellat reprehenderit, ea maxime sint dolorum. Eos necessitatibus natus, fuga dolorum suscipit voluptas consequuntur ad.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia maiores neque distinctio, error adipisci necessitatibus quibusdam in, veritatis cupiditate magni earum tempore, itaque repellendus asperiores ratione ducimus? Et, eum repellendus.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente accusantium, repellat corporis quis quaerat nihil iure sequi laboriosam voluptatum voluptas aut voluptates laborum rerum, eum aliquam architecto cumque adipisci minus?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum architecto doloremque excepturi ab facilis magnam, aliquam suscipit molestiae in, ipsum sed. Velit nulla repudiandae nam corporis laboriosam id possimus veniam!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad non sed odio odit facilis architecto similique deleniti, rem ducimus maxime, laborum veritatis blanditiis nemo ea quo sit, officiis nisi possimus!
+        
+        </p>
  </section>
 </main>  
  <footer>
      <h2>Contact Information</h2>
      <div>&#9993;: jongomez3377@gmail.com</div><br>
      <div>&#9742;: 208-650-5809</div><br>
+     <img class="social" src="images/facebook.png" alt="socialmedia">
+     <img class="social" src="images/instagram.png" alt="socialmedia">
+     <img class="social" src="images/twitter.png" alt="socialmedia"><br>
     &copy; <span id="currentyear"></span> The Weather Outsiders | Attibutions | Jonathon Gomez<br>
     <span id="lastchange"></span>
   </footer>
