--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -15,6 +15,7 @@
     </head>
     <body>
  <header>
+     <div class="banner">Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavillion.</div>
      <img id="logo" src="images/twologo.png" alt="outsiderslogo">
      <h1>The Weather Outsiders</h1>
      <div class="motto">The Best Weather Checker on the Web</div>
