--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -43,25 +43,31 @@
         </section>
          <section class="Weathersummary">
                 <h2 id="weathersum">Weather Summary</h2>
-         <p>Currently:<br>
-            Temperature:<br>
-            Humidity:<br>
-            Precipitation:<br>
-            Wind Speed: <br>
+         <img id="currentweather" src="images/cloudy.png" alt="currentweather">
+            <p>Currently: Cloudy<br>
+            Temperature: 37 &#176;F<br>
+            Humidity: 55%<br>
+            Precipitation: 32%<br>
+            Wind Speed: 13 mph<br>
         </p>
     </section>
     <section class="fiveday">            
         <h2>5 Day Forecast</h2>
         <div class="days">Sun</div>
         <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="temp">35 &#176;F</div>
         <div class="days">Mon</div>
         <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="temp">40 &#176;F</div>
         <div class="days">Tue</div>
         <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="temp">45 &#176;F</div>
         <div class="days">Wed</div>
         <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="temp">38 &#176;F</div>
         <div class="days">Thur</div>
         <img class="weathercond" src="images/snowing.png" alt="weather">
+        <div class="temp">30 &#176;F</div>
     </section>
     <section class="Article">
         <h2>How to survive a blizzard &#128561</h2>
@@ -82,7 +88,8 @@
      <div>&#9742;: 208-650-5809</div><br>
      <img class="social" src="images/facebook.png" alt="socialmedia">
      <img class="social" src="images/instagram.png" alt="socialmedia">
-     <img class="social" src="images/twitter.png" alt="socialmedia"><br>
+     <img class="social" src="images/twitter.png" alt="socialmedia">
+     <img class="map" src="images/prestonmap.jpg" alt="mapofpreston">
     &copy; <span id="currentyear"></span> The Weather Outsiders | Attibutions | Jonathon Gomez<br>
     <span id="lastchange"></span>
   </footer>
