--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -55,18 +55,18 @@
         <h2>5 Day Forecast</h2>
         <div class="days">Sun</div>
         <img class="weathercond" src="images/snowing.png" alt="weather">
-        <div class="temp">35 &#176;F</div>
+        <div class="temp">32 &#176;F</div>
         <div class="days">Mon</div>
-        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <img class="weathercond" src="images/sunny.png" alt="weather">
         <div class="temp">40 &#176;F</div>
         <div class="days">Tue</div>
-        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <img class="weathercond" src="images/sunny.png" alt="weather">
         <div class="temp">45 &#176;F</div>
         <div class="days">Wed</div>
-        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <img class="weathercond" src="images/cloudy.png" alt="weather">
         <div class="temp">38 &#176;F</div>
         <div class="days">Thur</div>
-        <img class="weathercond" src="images/snowing.png" alt="weather">
+        <img class="weathercond" src="images/partlycloudywindy.png" alt="weather">
         <div class="temp">30 &#176;F</div>
     </section>
     <section class="Article">
