--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -15,7 +15,7 @@
     </head>
     <body>
  <header>
-     <div class="banner">Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavillion.</div>
+     <div id="banner"></div>
      <img id="logo" src="images/twologo.png" alt="outsiderslogo">
      <h1>The Weather Outsiders</h1>
      <div class="motto">The Best Weather Checker on the Web</div>
@@ -53,26 +53,28 @@
     </section>
     <section class="fiveday">            
         <h2>5 Day Forecast</h2>
-        <div class="days">Sun</div>
-        <img class="weathercond" src="images/snowing.png" alt="weather">
-        <div class="temp">32 &#176;F</div>
-        <div class="days">Mon</div>
-        <img class="weathercond" src="images/sunny.png" alt="weather">
-        <div class="temp">40 &#176;F</div>
-        <div class="days">Tue</div>
-        <img class="weathercond" src="images/sunny.png" alt="weather">
-        <div class="temp">45 &#176;F</div>
-        <div class="days">Wed</div>
-        <img class="weathercond" src="images/cloudy.png" alt="weather">
-        <div class="temp">38 &#176;F</div>
-        <div class="days">Thur</div>
-        <img class="weathercond" src="images/partlycloudywindy.png" alt="weather">
-        <div class="temp">30 &#176;F</div>
+        <div class="forecasttable">
+            <div class="days" id="day1"></div>
+            <img class="weathercond" id="day1cond" src="images/cloudy.png" alt="weather">
+            <div class="temp" id="day1temp">32 &#176;F</div>
+            <div class="days" id="day2"></div>
+            <img class="weathercond" id="day2cond" src="images/sunny.png" alt="weather">
+            <div class="temp" id="day2temp">40 &#176;F</div>
+            <div class="days" id="day3"></div>
+            <img class="weathercond" id="day3cond" src="images/sunny.png" alt="weather">
+            <div class="temp" id="day3temp">45 &#176;F</div>
+            <div class="days" id="day4"></div>
+            <img class="weathercond" id="day4cond" src="images/cloudy.png" alt="weather">
+            <div class="temp" id="day4temp">38 &#176;F</div>
+            <div class="days" id="day5"></div>
+            <img class="weathercond" id="day5cond" src="images/cloudy.png" alt="weather">
+            <div class="temp" id="day5temp">30 &#176;F</div>
+    </div>
     </section>
     <section class="Article">
         <h2>How to survive a blizzard &#128561</h2>
         <img class="articleimg" src="images/blizzard.jpg" alt="blizzard">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit expedita quo rem itaque non, tempora libero eum quisquam, sed dolorum consectetur perspiciatis eaque, numquam quis error fugiat atque optio repudiandae. 
+        <p class="content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit expedita quo rem itaque non, tempora libero eum quisquam, sed dolorum consectetur perspiciatis eaque, numquam quis error fugiat atque optio repudiandae. 
            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci sunt minus non laudantium quod, voluptas repellat reprehenderit, ea maxime sint dolorum. Eos necessitatibus natus, fuga dolorum suscipit voluptas consequuntur ad.
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia maiores neque distinctio, error adipisci necessitatibus quibusdam in, veritatis cupiditate magni earum tempore, itaque repellendus asperiores ratione ducimus? Et, eum repellendus.
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente accusantium, repellat corporis quis quaerat nihil iure sequi laboriosam voluptatum voluptas aut voluptates laborum rerum, eum aliquam architecto cumque adipisci minus?
@@ -96,5 +98,7 @@
   <script src="js/currentyear.js"></script>
   <script src="js/lastmodfied.js"></script>
   <script src="js/togglemenu.js"></script>
+  <script src="js/fivedays.js"></script>
+  <script src="js/banner.js"></script>
 </body>
 </html>
