--- a/Lesson 5/preston-5.html
+++ b/Lesson 5/preston-5.html
@@ -100,5 +100,6 @@
   <script src="js/togglemenu.js"></script>
   <script src="js/fivedays.js"></script>
   <script src="js/banner.js"></script>
+  <script src="js/snailloop.js"></script>
 </body>
 </html>
