--- a/index.html
+++ b/index.html
@@ -18,17 +18,30 @@
 
     <ul>
       <li>Lesson 02: <a href="url">Assignment Link</a></li>
-      <li>Lesson 03: <a href="Lesson 3/index.html">Web Planning Document</a></li>
-      <li>Lesson 04: <a href="Lesson 4/preston-4.html">Preston, Idaho Page</a></li>
-      <li>Lesson 05: <a href="Lesson 5/preston-5.html">Preston, Idaho Page Pt. 2</a></li>
-      <li>Lesson 06: <a href="Lesson 6/preston-6.html">Preston, Idaho Page Pt. 3</a></li>
+      <li>
+        Lesson 03: <a href="Lesson 3/index.html">Web Planning Document</a>
+      </li>
+      <li>
+        Lesson 04: <a href="Lesson 4/preston-4.html">Preston, Idaho Page</a>
+      </li>
+      <li>
+        Lesson 05:
+        <a href="Lesson 5/preston-5.html">Preston, Idaho Page Pt. 2</a>
+      </li>
+      <li>
+        Lesson 06:
+        <a href="Lesson 6/preston-6.html">Preston, Idaho Page Pt. 3</a>
+      </li>
     </ul>
     <footer>
       &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
-      <a href="https://www.byui.edu/online" id="byuilink">BYUI Online Learning</a><br />
+      <a href="https://www.byui.edu/online" id="byuilink"
+        >BYUI Online Learning</a
+      ><br />
       <span id="lastchange"></span>
     </footer>
     <script src="js/lastmodfied.js"></script>
     <script src="js/currentyear.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   </body>
 </html>
