--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -41,11 +41,8 @@
      <h2 id="title">Preston, Idaho</h2>
      
             <img id="heroimage" src="images/franklinOriginal.jpeg" alt="heroimage"
-                srcset="images/franklinLarge.jpg 1000w, 
-                images/franklinMedium.jpg 500w ,
-                images/franklinSmall.jpg 200w">
-            </img>
-                <figcaption id="phototag">Photo by <a href="https://unsplash.com/@ianscar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ian Scargill</a> on <a href="https://unsplash.com/s/photos/idaho?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></figcaption>
+                srcset="images/franklinLarge.jpg 1000w, images/franklinMedium.jpg 500w, images/franklinSmall.jpg 200w" sizes = "1000w, 500w, 200w">
+                <div id="phototag">Photo by <a href="https://unsplash.com/@ianscar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ian Scargill</a> on <a href="https://unsplash.com/s/photos/idaho?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></div>
         </section>
          <section class="Weathersummary">
                 <h2 id="weathersum">Weather Summary</h2>
@@ -79,7 +76,7 @@
     </div>
     </section>
     <section class="Article">
-        <h2>How to survive a blizzard &#128561</h2>
+        <h2>How to survive a blizzard &#128561;</h2>
         <img class="articleimg" src="images/blizzard.jpg" alt="blizzard">
         <p class="content">At auctor urna nunc id cursus metus aliquam eleifend mi. Dolor sed viverra ipsum nunc aliquet. Arcu cursus vitae congue mauris. Cum sociis natoque penatibus et. Arcu risus quis varius quam quisque id diam vel. Tincidunt vitae semper quis lectus. Tempus urna et pharetra pharetra massa massa ultricies mi quis. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Habitant morbi tristique senectus et netus et malesuada. Neque vitae tempus quam pellentesque nec nam aliquam. Pulvinar etiam non quam lacus suspendisse. Lobortis feugiat vivamus at augue eget arcu dictum varius duis. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. In ante metus dictum at tempor commodo ullamcorper. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Sit amet consectetur adipiscing elit duis tristique. Pellentesque sit amet porttitor eget dolor morbi. Elit duis tristique sollicitudin nibh sit amet commodo.
         </p>
