--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -41,7 +41,7 @@
      <h2 id="title">Preston, Idaho</h2>
      
             <img id="heroimage" src="images/franklinOriginal.jpeg" alt="heroimage"
-                srcset="images/franklinLarge.jpg 1000w, images/franklinMedium.jpg 500w, images/franklinSmall.jpg 200w" sizes = "1000w, 500w, 200w">
+                srcset="images/franklinLarge.jpg 1000w, images/franklinMedium.jpg 500w, images/franklinSmall.jpg 200w" sizes = "1000vw, 500vw, 200vw">
                 <div id="phototag">Photo by <a href="https://unsplash.com/@ianscar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ian Scargill</a> on <a href="https://unsplash.com/s/photos/idaho?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></div>
         </section>
          <section class="Weathersummary">
