--- a/Lesson 6/preston-6.html
+++ b/Lesson 6/preston-6.html
@@ -48,12 +48,11 @@
           src="images/franklinOriginal.jpeg"
           alt="heroimage"
           srcset="
-            images/franklinLarge.jpg 1000w" sizes="1000vw"
-            srcset="images/franklinMedium.jpg 500w"
-            sizes="500vw"
-            srcset="images/franklinSmall.jpg 200w"
-            sizes="200vw"
-          
+            images/franklinLarge.jpg  1000w,
+            images/franklinMedium.jpg  500w,
+            images/franklinSmall.jpg   200w
+          "
+          sizes="1000vw, 500vw, 200vw"
         />
         <div id="phototag">
           Photo by
