--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         Lesson 06:
         <a href="Lesson 6/preston-6.html">Preston, Idaho Page Pt. 3</a>
       </li>
+      <li>
+        Lesson 07:
+        <a href="Lesson 7/lazyload.html">Progessive Load Assignment</a>|<a href="">Gallery</a>
+      </li>
     </ul>
     <footer>
       &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
