--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </li>
       <li>
         Lesson 07:
-        <a href="Lesson 7/lazyload.html">Progessive Load Assignment</a>|<a href="">Gallery</a>
+        <a href="Lesson 7/lazyload.html">Progessive Load Assignment</a>|<a href="Lesson 7/gallery-7.html">Gallery Page</a>
       </li>
     </ul>
     <footer>
