--- a/Lesson7/gallery-7.html
+++ b/Lesson7/gallery-7.html
@@ -193,6 +193,6 @@
     <script src="../Lesson6/js/banner.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="../Lesson6/js/webfontload.js"></script>
-    <script src="js/loadimages.js"></script>
+    <script src="js/lazyload.js"></script>
   </body>
 </html>
