--- a/Lesson7/lazyload.html
+++ b/Lesson7/lazyload.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="css/lazyimages.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+
 </head>
 <body>
     <h1>Lazy Load</h1>
@@ -27,5 +33,5 @@
         <img src="https://via.placeholder.com/400x300.png/FF6961/FFFFFF?text=Image6" data-src="images/Sept2020.jpg" alt="image6" class="right">
     </picture>
 </body>
-<script src="js/loadimages.js"></script>
+<script src="js/practice.js"></script>
 </html>
