--- a/Lesson7/lazyload.html
+++ b/Lesson7/lazyload.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lazy Load</title>
     <link href="css/lazyimages.css" rel="stylesheet" />
     <link href="../css/normalize.css" rel="stylesheet" />
     <link
