--- a/Lesson6/preston-6.html
+++ b/Lesson6/preston-6.html
@@ -8,11 +8,6 @@
       content="This is the Preston Page that has relevant weather information for Preston, Idaho."
     />
     <title>Preston, Idaho</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant&family=Righteous&display=swap"
-      rel="stylesheet"
-    />
     <!--CSS Stylesheets-->
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/small.css" rel="stylesheet" />
@@ -34,7 +29,7 @@
         <li class="active"><a href="preston-6.html">Preston</a></li>
         <li><a>Soda Springs</a></li>
         <li><a>Fish Haven</a></li>
-        <li><a>Storm Center</a></li>
+        <li><a href="../Lesson8/stormcenter.html">Storm Center</a></li>
         <li><a>Gallery</a></li>
       </ul>
     </nav>
@@ -151,6 +146,6 @@
     <script src="js/banner.js"></script>
     <script src="js/windchill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="js/webfrontload.js"></script>
+    <script src="js/webfontload.js"></script>
   </body>
 </html>
