--- a/Lesson7/gallery-7.html
+++ b/Lesson7/gallery-7.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant&family=Righteous&display=swap"
-      rel="stylesheet"
-    />
     <!--CSS Stylesheets-->
     <link href="../Lesson6/css/normalize.css" rel="stylesheet" />
     <link href="../Lesson6/css/small.css" rel="stylesheet" />
@@ -30,7 +25,7 @@
         <li><a href="../Lesson6/preston-6.html">Preston</a></li>
         <li><a>Soda Springs</a></li>
         <li><a>Fish Haven</a></li>
-        <li><a>Storm Center</a></li>
+        <li><a href="../Lesson8/stormcenter.html">Storm Center</a></li>
         <li class="active"><a href="gallery-7.html">Gallery</a></li>
       </ul>
     </nav>
