--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
     <ul>
       <li>Lesson 02: <a href="url">Assignment Link</a></li>
-      <li>
-        Lesson 03: <a href="Lesson3/index.html">Web Planning Document</a>
-      </li>
+      <li>Lesson 03: <a href="Lesson3/index.html">Web Planning Document</a></li>
       <li>
         Lesson 04: <a href="Lesson4/preston-4.html">Preston, Idaho Page</a>
       </li>
@@ -34,7 +32,8 @@
       </li>
       <li>
         Lesson 07:
-        <a href="Lesson7/lazyload.html">Progessive Load Assignment</a>|<a href="Lesson7/gallery-7.html">Gallery Page</a>
+        <a href="Lesson7/lazyload.html">Progessive Load Assignment</a> |
+        <a href="Lesson7/gallery-7.html">Gallery Page</a>
       </li>
     </ul>
     <footer>
@@ -47,5 +46,6 @@
     <script src="js/lastmodfied.js"></script>
     <script src="js/currentyear.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="js/webfont.js"></script>
   </body>
 </html>
