--- a/Lesson6/preston-6.html
+++ b/Lesson6/preston-6.html
@@ -37,17 +37,17 @@
     <main>
       <section class="titleandimg">
         <h2 id="title">Preston, Idaho</h2>
-
+        <picture>
         <img
           id="heroimage"
-          src="images/franklinOriginal.jpeg"
+          src="images/franklinSmall.jpg"
           alt="heroimage"
-          srcset="
-            images/franklinLarge.jpg  1000w,
-            images/franklinMedium.jpg  500w,
-            images/franklinSmall.jpg   200w
-          "
+          sizes="50vw"
+          srcset="images/franklinLarge.jpg  1000w,
+                  images/franklinMedium.jpg  800w,
+                  images/franklinSmall.jpg   200w"
         >
+      </picture>
         <div id="phototag">
           Photo by
           <a
