--- a/Lesson6/preston-6.html
+++ b/Lesson6/preston-6.html
@@ -40,12 +40,12 @@
         <picture>
         <img
           id="heroimage"
-          src="images/franklinSmall.jpg"
+          src="images/HeroImage200px.jpg"
           alt="heroimage"
           sizes="50vw"
-          srcset="images/franklinLarge.jpg  1000w,
-                  images/franklinMedium.jpg  800w,
-                  images/franklinSmall.jpg   200w"
+          srcset="images/HeroImage1200px.jpg  1000w,
+                  images/HeroImage500px.jpg  500w,
+                  images/HeroImage200px.jpg   200w"
         >
       </picture>
         <div id="phototag">
