--- a/Lesson7/gallery-7.html
+++ b/Lesson7/gallery-7.html
@@ -36,7 +36,7 @@
       <h2>Weather Gallery</h2>
       <div class="gallerytable">
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/cloud200px.jpg"
             alt="cloud"
@@ -49,7 +49,7 @@
           <figcaption class="gallerycap">A Partly Cloudy Day</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/fallstreet200px.jpg"
             alt="fallstreet"
@@ -62,7 +62,7 @@
           <figcaption class="gallerycap">A Street Full of Leaves</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/foggymtn200px.jpg"
             alt="foggymtn"
@@ -88,7 +88,7 @@
           <figcaption class="gallerycap">Idaho Rainbow</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/sunsetstormcloud200px.jpg"
             alt="sunsetstormcloud"
@@ -101,7 +101,7 @@
           <figcaption class="gallerycap">Sunset After a Rainstom</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/redcloud200px.jpg"
             alt="redcloud"
@@ -114,7 +114,7 @@
           <figcaption class="gallerycap">Red Clouds</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/thunderstorm200px.jpg"
             alt="thunderstorm"
@@ -127,7 +127,7 @@
           <figcaption class="gallerycap">Idaho Thunderstorm</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/wintersunset200px.jpg"
             alt="wintersunset"
@@ -140,7 +140,7 @@
           <figcaption class="gallerycap">A Winter Sunset</figcaption>
         </figure>
         <figure>
-          <img
+          <img class="gallery"
             src="https://via.placeholder.com/200.png/002129?text=two.com"
             data-src="images/snowingmtn.jpg"
             alt="snowingmtn"
@@ -189,5 +189,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="../Lesson6/js/webfontload.js"></script>
     <script src="js/lazyload.js"></script>
+  
   </body>
 </html>
