--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <a href="Lesson7/lazyload.html">Progessive Load Assignment</a> |
         <a href="Lesson7/gallery-7.html">Gallery Page</a>
       </li>
+      <li>
+        Lesson 08:
+        <a href="Lesson8/tablebuild.html">Table Build</a> |
+        <a href="Lesson8/stormcenter.html">Storm Center</a>
+      </li>
     </ul>
     <footer>
       &copy; <span id="currentyear"></span> | Jonathon Gomez | Idaho |
