--- a/Lesson8/tablebuild.html
+++ b/Lesson8/tablebuild.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Table Build</title>
     <link href="css/tablebuild.css" rel="stylesheet" />
   </head>
   <body>
@@ -38,7 +38,7 @@
         <tr>
           <td>November</td>
           <td>$8,610</td>
-          <th >$7,500</th>
+          <th>$7,500</th>
         </tr>
         <tr>
           <td id="special">Black Friday</td>
