--- a/Lesson8/stormcenter.html
+++ b/Lesson8/stormcenter.html
@@ -17,55 +17,104 @@
   </head>
   <body>
     <header>
-        <div id="banner"></div>
-        <img id="logo" src="../Lesson6/images/twologo.png" alt="outsiderslogo" />
-        <h1>The Weather Outsiders</h1>
-        <div class="motto">The Best Weather Checker on the Web</div>
-      </header>
-      <nav class="clearfix">
-        <button onclick="toggleMenu()">&#9776; Menu</button>
-        <ul id="primaryNav" class="hide">
-          <li><a>Home</a></li>
-          <li><a href="../Lesson6/preston-6.html">Preston</a></li>
-          <li><a>Soda Springs</a></li>
-          <li><a>Fish Haven</a></li>
-          <li class="active"><a href="stormcenter.html">Storm Center</a></li>
-          <li><a href="../Lesson7/gallery-7.html">Gallery</a></li>
-        </ul>
-      </nav>
-      <footer>
-        <h1>Contact Information</h1>
-        <div>&#9993;: jongomez3377@gmail.com</div>
-        <br />
-        <div>&#9742;: 208-650-5809</div>
-        <br />
-        <div class="socialgrid">
-          <img
-            class="social"
-            src="../Lesson6/images/facebook.png"
-            alt="socialmedia"
-          />
-          <img
-            class="social"
-            src="../Lesson6/images/instagram.png"
-            alt="socialmedia"
-          />
-          <img
-            class="social"
-            src="../Lesson6/images/twitter.png"
-            alt="socialmedia"
-          />
+      <div id="banner"></div>
+      <img id="logo" src="../Lesson6/images/twologo.png" alt="outsiderslogo" />
+      <h1>The Weather Outsiders</h1>
+      <div class="motto">The Best Weather Checker on the Web</div>
+    </header>
+    <nav class="clearfix">
+      <button onclick="toggleMenu()">&#9776; Menu</button>
+      <ul id="primaryNav" class="hide">
+        <li><a>Home</a></li>
+        <li><a href="../Lesson6/preston-6.html">Preston</a></li>
+        <li><a>Soda Springs</a></li>
+        <li><a>Fish Haven</a></li>
+        <li class="active"><a href="stormcenter.html">Storm Center</a></li>
+        <li><a href="../Lesson7/gallery-7.html">Gallery</a></li>
+      </ul>
+    </nav>
+    <body>
+      <form method="get" action="thankyou.html"> 
+        <h3>Your Information</h3>
+        <fieldset>
+          <label class="top"
+            >Full Name*: <input type="text" name="fullname" required
+          /></label>
+          <label class="top"
+            >Email:
+            <input type="email" name="email" placeholder="someone@gmail.com"
+          /></label>
+          <label class="top"
+            >Phone Number*: <input type="tel" name="phone" required
+          /></label>
+          <label class="top">Zip Code*: <input type="number" name="zip" required /></label>
+        </fieldset>
+        <h3>Storm Information</h3>
+        <fieldset>
+          <label class="top">Storm Date: <input type="date" name="date" /></label>
+          <label class="top"
+            >Storm Type: <input list="stormtype"/>
+            <datalist id=stormtype>
+            <option value="Flash Flood"></option>
+            <option value="Hail"></option>
+            <option value="Hurricane"></option>
+            <option value="Thunderstorm"></option>
+            <option value="Tornado"></option>
+          </datalist>
+          </label>
+          <label class="top">Storm Severity: <input type="range" name="severity" min="1" max="10" class="stormrange"></label>
+          <label class="top">Storm Region: <select name="region">
+            <option value="" selected disabled>Select Region...</option>
+            <option value="fishhaven">Fish Haven</option>
+            <option value="preston">Preston</option>
+            <option value="sodasprings">Soda Springs</option>
+          </select>
+          <div>User In Danger</div>
+          <div class="custom-vertical-radio-buttons">
+          <label class="customcontainer">Yes<input type="radio" name="danger" value="Yes"/><span class="custom-radio-button"></span></label>
+          <label class="customcontainer">Maybe<input type="radio" name="danger" value="Maybe"/><span class="custom-radio-button"></span></label>
+          <label class="customcontainer">No<input type="radio" name="danger" value="No"/><span class="custom-radio-button"></span></label>
         </div>
-        &copy; <span id="currentyear"></span> The Weather Outsiders | Attibutions
-        | Jonathon Gomez<br />
-        <span id="lastchange"></span>
-      </footer>
-      <!--Javascript Links-->
-      <script src="../Lesson6/js/currentyear.js"></script>
-      <script src="../Lesson6/js/lastmodfied.js"></script>
-      <script src="../Lesson6/js/togglemenu.js"></script>
-      <script src="../Lesson6/js/banner.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-      <script src="../Lesson6/js/webfontload.js"></script>
+        </fieldset>
+        <fieldset>
+        <label class="top">Additional Information or Comments<input type="textarea" size=""></label>
+        </fieldset>
+        <label><input class="submitBtn" type="submit" value="Show My Report"></label>
+      </form>
     </body>
-  </html>
+    <footer>
+      <h1>Contact Information</h1>
+      <div>&#9993;: jongomez3377@gmail.com</div>
+      <br />
+      <div>&#9742;: 208-650-5809</div>
+      <br />
+      <div class="socialgrid">
+        <img
+          class="social"
+          src="../Lesson6/images/facebook.png"
+          alt="socialmedia"
+        />
+        <img
+          class="social"
+          src="../Lesson6/images/instagram.png"
+          alt="socialmedia"
+        />
+        <img
+          class="social"
+          src="../Lesson6/images/twitter.png"
+          alt="socialmedia"
+        />
+      </div>
+      &copy; <span id="currentyear"></span> The Weather Outsiders | Attibutions
+      | Jonathon Gomez<br />
+      <span id="lastchange"></span>
+    </footer>
+    <!--Javascript Links-->
+    <script src="../Lesson6/js/currentyear.js"></script>
+    <script src="../Lesson6/js/lastmodfied.js"></script>
+    <script src="../Lesson6/js/togglemenu.js"></script>
+    <script src="../Lesson6/js/banner.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="../Lesson6/js/webfontload.js"></script>
+  </body>
+</html>
