--- a/Lesson8/stormcenter.html
+++ b/Lesson8/stormcenter.html
@@ -76,9 +76,10 @@
           <label class="customcontainer">No<input type="radio" name="danger" value="No"/><span class="custom-radio-button"></span></label>
         </div>
         </fieldset>
+        <h3>Additional Information or Comments</h3>
         <fieldset>
-        <label class="top">Additional Information or Comments<input type="textarea" size=""></label>
-        </fieldset>
+        <label class="textbx"><textarea name="additioncomments" rows="10" cols="25"></textarea></label>
+      </fieldset>
         <label><input class="submitBtn" type="submit" value="Show My Report"></label>
       </form>
     </body>
