--- a/Lesson8/thankyou.html
+++ b/Lesson8/thankyou.html
@@ -34,8 +34,9 @@
       </ul>
     </nav>
 <body>
-    <section>
+    <section class="thankyou">
     <h2>Thank You</h2>
+    <div class="smiley">&#128578;</div>
     <p>Thank you for filling out the form. We will process you report shortly.</p>
 </section>
 </body>
